Fixes row overflows

--- a/assets/styles/mybooking-engine-components.css
+++ b/assets/styles/mybooking-engine-components.css
@@ -205,6 +205,7 @@
   margin-bottom: 0.5rem;
   padding: 1rem;
   border: 1px solid var(--mb-product-total-border);
+  border-radius: var(--mb-border-radius);
   background-color: var(--mb-product-total-bg);
   color: var(--mb-product-total-color);
 }
@@ -225,6 +226,7 @@
 
 .mybooking-extra_container {
   border: 1px solid var(--mb-border-color);
+  border-radius: var(--mb-border-radius);
 }
 
 .mybooking-extra_item {
@@ -244,6 +246,10 @@
     flex-flow: row;
     text-align: left;
   }
+}
+
+.mybooking-extra_box-img .extra-img {
+  width: 100%;
 }
 
 .mybooking-extra_item:last-of-type {
@@ -365,14 +371,25 @@
   text-align: center;
 }
 
+.mybooking-extra_control .mb-button.btn-minus-extra {
+  border-radius: var(--mb-border-radius) 0 0 var(--mb-border-radius)!important;
+  padding: 0.5rem!important;
+}
+
+.mybooking-extra_control .mb-button.btn-plus-extra {
+  border-radius: 0 var(--mb-border-radius) var(--mb-border-radius) 0!important;
+  padding: 0.5rem!important;
+}
+
 .mybooking-extra_control .mb-input {
   display: inline-block;
-  max-width: 3em;
+  max-width: 3rem;
   text-align: center;
-  padding: 3px;
+  padding: 3px!important;
   margin: 0;
-  min-width: 1.5em;
+  min-width: 1.5rem;
   font-size: 1em;
+  border-radius: 0!important;
 }
 
 
@@ -462,6 +479,7 @@
 } @media ( min-width: 575.98px ) {
   .mybooking-payment_confirmation-box {
     flex-flow: row;
+    flex-wrap: wrap;
   }
 }
 
